fix: update background colors and scrollbar styles for improved consistency in chat UI

--- a/css/chat.css
+++ b/css/chat.css
@@ -6,7 +6,7 @@
     border-radius: 12px;
     overflow: hidden;
     border: 0px solid var(--bs-border-color);
-    background-color: #333;
+    background-color: #121212;
     color: white;
     box-shadow: 0 0 8px 4px rgba(255, 255, 255, 0.3);
 }
@@ -17,7 +17,7 @@
     overflow-y: auto;
     padding: 20px;
     border-bottom: 0px solid var(--bs-border-color);
-    background-color: #333;
+    background-color: #121212;
     color: white;
     box-shadow: 0 0 8px 4px rgba(255, 255, 255, 0.3);
 }
@@ -27,17 +27,17 @@
 }
 
 .messages::-webkit-scrollbar-track {
-    background: var(--bs-gray-100);
+    background-color: #333;
     border-radius: 4px;
 }
 
 .messages::-webkit-scrollbar-thumb {
-    background: var(--bs-gray-400);
+    background-color: #3b3b3b;
     border-radius: 4px;
 }
 
 .messages::-webkit-scrollbar-thumb:hover {
-    background: var(--bs-gray-500);
+    background-color: #3f3f3f;
 }
 
 /* Individual Message */
@@ -46,13 +46,14 @@
     align-items: flex-start;
     margin-bottom: 15px;
     padding: 10px;
-    background-color: #3b3b3b;
+    background-color: #333;
     color: white;
     box-shadow: 0 0 8px 4px rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
 }
 
 .message:hover {
-    background: var(--bs-gray-100);
+    background-color: #3b3b3b;
 }
 
 /* Profile Picture */
@@ -169,9 +170,10 @@
     display: flex;
     padding: 20px;
     /* background: var(--bs-body-bg); */
-    border-top: 1px solid var(--bs-border-color);
+    border-top: 1px solid;
+    border-color: (255, 255, 255, 0.3);
     gap: 10px;
-    background-color: #333;
+    background-color: #121212;
     color: white;
 }
 
